REFACTOR: Validation의 validateInputList 수정
문자열을 리스트로 변환하는 과정을 단순화했습니다.